--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "소소한 이야기"
+title                    : "하루살이 이야기"
 title_separator          : "-"
 name                     : "Seung"
 description              : "쌓이면 늘어나겠지..."
@@ -71,7 +71,7 @@ algolia:
   application_id         : # YOUR_APPLICATION_ID
   index_name             : # YOUR_INDEX_NAME
   search_only_api_key    : # YOUR_SEARCH_ONLY_API_KEY
-  powered_by             : # true (default), false
+  powered_by             : false # true (default), false
 google:
   search_engine_id       : # YOUR_SEARCH_ENGINE_ID
   instant_search         : # false (default), true
@@ -108,9 +108,9 @@ analytics:
 author:
   name             : "Seung"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an amazing person."
+  bio              : "Ond Day One Post - 메인 페이지 공사"
   location         : "Seoul"
-  email            :
+  email            : "grayhacker91@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
